# glassbench

./: .dockerignore  .gitignore  CONTRIBUTING.md  DATASHEET.md  Dockerfile  LEADERBOARD.md  LICENSE  Makefile  PRE_REGISTRATION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
baselines/: README.md  _common.py  agent_llm.py  always_abstain.py  always_answer.py  bm25_retrieval.py  llm_adapter.py  random_confidence.py
data/: glassbench_v0.1.jsonl
docs/superpowers/plans/: 2026-06-24-glassbench-nextjs-liquid-glass-redesign.md
docs/superpowers/specs/: 2026-06-24-glassbench-nextjs-liquid-glass-redesign-design.md
glassbench/: __init__.py  build_data.py  calib.py  match.py  score.py
scripts/: gen_leaderboard.py  validate_submission.py
site/: README.md  build_site.py  nginx.conf
submissions/EXAMPLE/: predictions.json  system.md
submissions/abstention_aware_llm/: predictions.json  system.md
submissions/agent_llm/: predictions.json  system.md
submissions/always_abstain/: predictions.json
submissions/always_answer/: predictions.json
submissions/bm25_retrieval/: predictions.json
submissions/random_confidence/: predictions.json
submissions/verbalized_confidence_llm/: predictions.json  system.md
tests/: test_data_integrity.py  test_gaming_vectors.py  test_metrics.py
web/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/datasheet/: page.tsx
web/app/leaderboard/: page.tsx
web/app/submit/: page.tsx
web/components/leaderboard/: LeaderboardTable.tsx  (+1 more)
web/data/: leaderboard.json
web/lib/: color-ramp.ts  datasheet.ts  glass-score.ts  glassbench-data.ts  site.ts  types.ts
web/scripts/: sync-data.mjs
web/test/: color-ramp.test.ts  glass-score.test.ts  glassbench-data.test.ts
(+21 files in other folders)
